--- a/notebooks/training_and_visualization.ipynb
+++ b/notebooks/training_and_visualization.ipynb
@@ -13,58 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "3b4150b8-97e4-4e93-b746-39d3ba9303e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "from typing import List\n",
+    "import sys\n",
+    "sys.path.append('../src')  # Add the src folder to the path\n",
     "\n",
-    "# Function to check if a number is prime\n",
-    "def is_prime(n: int) -> bool:\n",
-    "    if n <= 1:\n",
-    "        return False\n",
-    "    if n == 2:\n",
-    "        return True\n",
-    "    if n % 2 == 0:\n",
-    "        return False\n",
-    "    \n",
-    "    max_check = int(math.sqrt(n))\n",
-    "    for i in range(3, max_check + 1, 2):\n",
-    "        if n % i == 0:\n",
-    "            return False\n",
-    "    return True\n",
+    "from utils import generate_number_sentences, save_sentences_to_file\n",
     "\n",
-    "# Function to generate sentences describing prime/composite and even/odd status\n",
-    "def generate_number_sentences(limit: int = 50) -> List[str]:\n",
-    "    sentences: List[str] = []\n",
-    "\n",
-    "    for num in range(1, limit + 1):\n",
-    "        # Determine if the number is prime or composite\n",
-    "        if is_prime(num):\n",
-    "            prime_sentence = f\"{num} is a prime number.\"\n",
-    "        else:\n",
-    "            prime_sentence = f\"{num} is a composite number.\"\n",
-    "\n",
-    "        # Determine if the number is even or odd\n",
-    "        if num % 2 == 0:\n",
-    "            odd_even_sentence = f\"{num} is an even number.\"\n",
-    "        else:\n",
-    "            odd_even_sentence = f\"{num} is an odd number.\"\n",
-    "\n",
-    "        sentences.append(prime_sentence)\n",
-    "        sentences.append(odd_even_sentence)\n",
-    "    \n",
-    "    return sentences\n",
-    "\n",
-    "# Generate the descriptive sentences for numbers 1 to 50\n",
+    "# Generate and save sentences\n",
     "sentences = generate_number_sentences()\n",
-    "\n",
-    "# Write the generated sentences to a text file\n",
-    "with open(\"../data/numbers.txt\", \"w\") as f:\n",
-    "    for sentence in sentences:\n",
-    "        f.write(sentence + \"\\n\")"
+    "save_sentences_to_file(sentences, \"../data/numbers.txt\")"
    ]
   },
   {
@@ -81,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "ed951cdf-cbda-4e8e-b5ce-89361a1949f4",
    "metadata": {},
    "outputs": [
@@ -95,6 +56,9 @@
    ],
    "source": [
     "import re\n",
+    "\n",
+    "with open(\"../data/numbers.txt\", \"r\") as f:\n",
+    "    sentences = [line.strip() for line in f.readlines()]\n",
     "\n",
     "# Function to tokenize a sentence:\n",
     "# - Converts to lowercase\n",
@@ -133,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "0858a94a-f6ab-4e23-a447-35ef93ade8e5",
    "metadata": {},
    "outputs": [
@@ -259,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "81374745-0874-4259-a30f-9d0eeddd225b",
    "metadata": {},
    "outputs": [
@@ -319,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "55083ad4-ab64-4006-8e34-0ceaa9464854",
    "metadata": {},
    "outputs": [
